chore(style): fix divider layout bug
See: https://github.com/Semantic-Org/Semantic-UI/issues/4342

--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -131,3 +131,7 @@ table.ui.table td {
 .sortable-ghost {
   opacity: 0;
 }
+
+.ui.grid > .column + .divider, .ui.grid > .row > .column + .divider {
+  left: 50%;
+}
